--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div style="border: solid 1px;">Header</div>
     <div style="display: flex; flex-direction: row; height: 95vh;">
-      <div style="border: solid 1px; flex-grow: 1; display: flex; flex-direction: column;">
+      <div id = "controlPanel" style="border: solid 1px; flex-grow: 1; display: flex; flex-direction: column;">
         <button id="hiButton">Say Hi!</button>
         <button id="novy">novy objekt</button>
       </div>
